@@ -1,5 +1,10 @@
 2004-10-27  Vincent Noel  <vnoel@cox.net>
 
+	* log_repaint.c: Remove the save_rows_to_expand function which is
+	now useless.
+
+	* logview.c (CloseLogMenu): Fixes issues with menu items state.
+
 	* calendar.c: Remove unused global variables.
 
 	* logview.c: Use the GTK_STOCK_PROPERTIES icon.
